spacing sizing fix

--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,51 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+body {
+  margin: 0;
+}
+
+nav {
+  height: 70px;
+}
+
+nav img {
+  width: 7em;
+  margin-top: 2em;
+  margin-left: 50%;
+  transform: translateX(-50%);
+
+}
+
+main {
+  font-family: sans-serif;
+  text-align: center;
+  margin: 3em;
+  margin-top: 2em;
+}
+
+.book {
+  margin-top: 2em;
+  width: 80%;
+}
+
+main p {
+  margin-top: 3em;
+  font-size: 1em;
+  margin-bottom: 4em;
+}
+
+.link {
+  font-size: 2em;
+  color: blue;
+  text-decoration: none;
+  border: 3px solid blue;
+  border-radius: .5em;
+  padding: .5em;
+}
+
+footer p {
+  padding-top: 2em;
+  font-size: 0.8em;
+}
